[gd_scene load_steps=5 format=3 uid="uid://0akonjc8ebem"]

[ext_resource type="Script" path="res://Assets/Interactables/interactables.gd" id="1_oe7q3"]
[ext_resource type="Texture2D" uid="uid://qp74jsd02jvd" path="res://Assets/Art/Sign_post.png" id="2_td10n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6c5vr"]
size = Vector2(32, 32)

[sub_resource type="TextMesh" id="TextMesh_bh4s2"]
text = "Press Y"
font_size = 50

[node name="Interactables" type="Node2D"]
script = ExtResource("1_oe7q3")

[node name="SignPost" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -8)
texture = ExtResource("2_td10n")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_6c5vr")

[node name="pressY" type="MeshInstance2D" parent="."]
visible = false
position = Vector2(31.2834, -2.65278)
scale = Vector2(38.0012, -54.6296)
mesh = SubResource("TextMesh_bh4s2")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
